--- a/furniture/package.json
+++ b/furniture/package.json
@@ -13,8 +13,10 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.64.2",
     "sweetalert2": "^11.7.20",
+    "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
