--- a/furniture/package.json
+++ b/furniture/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.64.2",
     "sweetalert2": "^11.7.20",
     "swiper": "^10.1.0",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
