--- a/furniture/package.json
+++ b/furniture/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "sass": "^1.64.2",
     "sweetalert2": "^11.7.20",
