--- a/furniture/package.json
+++ b/furniture/package.json
@@ -15,8 +15,8 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "sass": "^1.64.2",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.20",
-    "swiper": "^10.1.0",
     "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
