--- a/furniture/package.json
+++ b/furniture/package.json
@@ -10,6 +10,7 @@
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
