--- a/furniture/package.json
+++ b/furniture/package.json
@@ -19,7 +19,8 @@
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.20",
     "use-react-router-breadcrumbs": "^4.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
